Added a heatmap and time slider functionality

--- a/dataviz/src/index.html
+++ b/dataviz/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
+<body style="margin:0px; padding: 0px;">
   <app-root></app-root>
 </body>
 
